--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "tme",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bin": {
-    "tme": "index.js"
-  }
+    "name": "tme",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "format": "prettier *.js --write",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bin": {
+        "tme": "index.js"
+    },
+    "devDependencies": {
+        "prettier": "^2.3.2"
+    }
 }
