--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     },
     "devDependencies": {
         "prettier": "^2.3.2"
+    },
+    "dependencies": {
+        "chalk": "^4.1.2"
     }
 }
