--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "prettier": "^2.3.2"
     },
     "dependencies": {
-        "chalk": "^4.1.2"
+        "chalk": "^4.1.2",
+        "jsdom": "^17.0.0"
     }
 }
